<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".YesNoActivity" 
    android:orientation="vertical"
    android:weightSum="1.0">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".YesNoActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:onClick="no"
            android:layout_weight=".7" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_you_dont"
            android:onClick="noYouDont" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oh_yeah"
            android:onClick="ohYeah"
            android:layout_weight=".3" />
    
        </LinearLayout>
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".YesNoActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="ok"
            android:layout_weight=".7" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uh_okay"
            android:onClick="uhOkay"
            android:layout_weight=".3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/well_no_because"
            android:onClick="wellNoBecause" />
    
        </LinearLayout>
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".YesNoActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yeah"
            android:onClick="yeah"
            android:layout_weight=".65" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yeah_exactly"
            android:onClick="yeahExactly"
            android:layout_weight=".35" />
    
        </LinearLayout>
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".YesNoActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_dont"
            android:onClick="youDont"
            android:layout_weight=".4" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yup"
            android:onClick="yup"
            android:layout_weight=".6" />
    
        </LinearLayout>
        
    </LinearLayout>