<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity" 
    android:orientation="vertical" 
    android:weightSum="1.0">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CategoryActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/cod_category_name" 
        android:layout_weight=".7"
        android:onClick="codButton"/>
    
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/depresski_category_name" 
        android:layout_weight="0"
        android:onClick="depresskiButton"/>
    
    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/dubstep_category_name" 
        android:layout_weight="0"
        android:onClick="dubstepButton"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/laugh_category_name" 
        android:layout_weight=".25"
        android:onClick="laughButton"/>

   </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CategoryActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">
    
        <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/exclamations_category_name" 
        android:onClick="exclamationsButton"/>
        
        <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/get_out_category_name" 
        android:layout_weight="1"
        android:onClick="getOutButton"/>

    	<Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/i_dont_care_category_name" 
        android:layout_weight="0"
        android:onClick="iDontCareButton"/>
    </LinearLayout>
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".CategoryActivity" 
        android:weightSum="1.0">

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/questions_category_name" 
            android:layout_weight=".2"
            android:onClick="questionsButton"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/threats_insults_category_name" 
            android:onClick="threatsInsultsButton"/>

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/yes_no_category_name" 
            android:layout_weight=".8"
            android:onClick="yesNoButton"/>
        
    </LinearLayout>
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CategoryActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/other_category_name" 
            android:onClick="otherButton"/>
    
    </LinearLayout>

</LinearLayout>