<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuestionsActivity" 
    android:orientation="vertical"
    android:weightSum="1.0">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuestionsActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_recording" 
            android:onClick="areYouRecording"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/wait_how" 
            android:onClick="waitHow"
            android:layout_weight="1.0"/>
    
        </LinearLayout>
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuestionsActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wat" 
            android:onClick="wat"
            android:layout_weight=".8"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_you_doing"
            android:onClick="whatYouDoing"
            android:layout_weight=".2" />
    
        </LinearLayout>
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuestionsActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whats_his_name"
            android:onClick="whatsHisName"
            android:layout_weight=".1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/which_one"
            android:onClick="whichOne"
            android:layout_weight=".9" />
    
        </LinearLayout>
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".QuestionsActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/why_on_news"
            android:onClick="whyOnNews"
            android:layout_weight="1" />
        
        </LinearLayout>
        
    </LinearLayout>