<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LaughActivity" 
    android:orientation="vertical"
    android:weightSum="1.0">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LaughActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chuckle" 
            android:onClick="chuckle"
            android:layout_weight=".5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chuckle2" 
            android:onClick="chuckle2"
            android:layout_weight=".5"/>
    
        </LinearLayout>
        
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LaughActivity" 
    android:orientation="horizontal" 
    android:weightSum="1.0">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laugh" 
            android:onClick="laugh"
            android:layout_weight=".5"/>
        

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laugh2" 
            android:onClick="laugh2"
            android:layout_weight=".5"/>
    
        </LinearLayout>
        
    
</LinearLayout>